Revise JVM GC settings and production guidelines
Updated JVM and GC settings table with detailed configurations for Java 8, 20, and 21, including heap sizes, GC types, and critical problems. Revised production thumb rules and added installation instructions for setenv.sh.